fixoverflowpubs/team

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ body {
   color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: safe center;
   background-color: black;
   position: relative;
 }
